Wix: Fixing the WIX

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1957,6 +1957,18 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveStat
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/lexers/JSX.lexres
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jsx_language@ActiveState.com/pylib/lang_jsx.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/components/koHandlebars_UDL_Language.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/lexers/Handlebars.lexres
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/pylib/lang_handlebars.py
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars-mainlex.udl
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars/css2handlebars.udl
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars/handlebars2html.udl
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars/handlebarslex.udl
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars/html2handlebars.udl
+feature-core/INSTALLDIR/lib/sdk/udl/handlebars/js2handlebars.udl
 feature-core/INSTALLDIR/lib/sdk/udl/docker-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/jsx-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/jsx/html2jsx.udl
