--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -7303,6 +7303,7 @@ feature-core/INSTALLDIR/lib/support/schemes/Default.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Legacy.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Emacs.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Atom.kkf
+feature-core/INSTALLDIR/lib/support/schemes/VSCode.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Eclipse.kkf
 feature-core/INSTALLDIR/lib/support/schemes/IntelliJ.kkf
 feature-core/INSTALLDIR/lib/support/schemes/Sublime.kkf
