Wix: Fixing the wix

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1703,6 +1703,25 @@ feature-core/INSTALLDIR/lib/mozilla/dependentlibs.list
 feature-core/INSTALLDIR/lib/mozilla/dictionaries/en-US.aff
 feature-core/INSTALLDIR/lib/mozilla/dictionaries/en-US.dic
 feature-core/INSTALLDIR/lib/mozilla/extensions/check-compatibility@dactyl.googlecode.com.xpi
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/elastic-tabstops@activestate.com/bootstrap.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/elastic-tabstops@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/elastic-tabstops@activestate.com/content/elastic-tabstops.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/elastic-tabstops@activestate.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/js/observer.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/js/pref-notify.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/sdk/categories.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/sdk/notify.js
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/ui/overlay/komodo.xul
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/ui/overlay/pref.xul
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/content/ui/pref-notify.xul
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/locale/en-US/notify.dtd
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/skin/icons/close.png
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/skin/icons/cog.png
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/skin/icons/undo.png
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/skin/notify.less
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/skin/pref-notify.less
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/angularjs_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/angularjs_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/angularjs_language@ActiveState.com/components/koAngularJS_UDL_Language.py
@@ -1830,9 +1849,7 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mxml_language@ActiveSta
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mxml_language@ActiveState.com/templates/Common/MXML.mxml
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mxml_language@ActiveState.com/xmlcatalogs/catalog.xml
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mxml_language@ActiveState.com/xmlcatalogs/mxml.dtd
-feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/install.rdf
-feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/notify@activestate.com/notify.jar
+
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/php_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/php_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/php_language@ActiveState.com/components/koPHP_UDL_Language.py
@@ -2000,10 +2017,6 @@ feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pyli
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/main.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/odict.py
 feature-core/INSTALLDIR/lib/mozilla/extensions/editorconfig@activestate.com/pylib/editorconfig/versiontools.py
-feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/bootstrap.js
-feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/chrome.manifest
-feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/elastic-tabstops.jar
-feature-core/INSTALLDIR/lib/mozilla/extensions/elastic-tabstops@activestate.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/bootstrap.js
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/extensions/focusmode@activestate.com/content/focusmode.js
