languages: Added Jinja2 thanks to Nguyễn Hồng Quân - fixes #1778 From https://bitbucket.org/hongquan/komodo-jinja
rn=

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1976,6 +1976,12 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@Act
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/install.rdf
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/lexers/Handlebars.lexres
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/handlebars_language@ActiveState.com/pylib/lang_handlebars.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/components/koJinja2_UDL_Language.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/lexers/Jinja2.lexres
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jinja2_language@ActiveState.com/pylib/lang_jinja2.py
 feature-core/INSTALLDIR/lib/sdk/udl/handlebars-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/handlebars/css2handlebars.udl
 feature-core/INSTALLDIR/lib/sdk/udl/handlebars/handlebars2html.udl
