languages: Added missing support for GetText - fixes #2016
rn=

(integrated from the KomodoIDE master branch change 2f890ca by Mitchell <mitchellb@activestate.com>)

https://github.com/Komodo/KomodoIDE/commit/2f890ca

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1438,6 +1438,7 @@ feature-core/INSTALLDIR/lib/mozilla/components/koPerlCompileLinter.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPerlLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPHPLinter.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPostScriptLanguage.py
+feature-core/INSTALLDIR/lib/mozilla/components/koPOGetTextLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPOVLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPowerBasicLanguage.py
 feature-core/INSTALLDIR/lib/mozilla/components/koPowerProLanguage.py
