WIX: fixing the wix.

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -6674,6 +6674,8 @@ feature-core/INSTALLDIR/lib/sdk/share/html_template.udl
 feature-core/INSTALLDIR/lib/sdk/share/koLANG_UDL_Language.py
 feature-core/INSTALLDIR/lib/sdk/share/ssl_template.udl
 feature-core/INSTALLDIR/lib/sdk/share/xml_template.udl
+feature-core/INSTALLDIR/lib/sdk/udl/jinja2-mainlex.udl
+feature-core/INSTALLDIR/lib/sdk/udl/jinja2lex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/angularjs-mainlex.udl
 feature-core/INSTALLDIR/lib/sdk/udl/angularjs/angularjs2html.udl
 feature-core/INSTALLDIR/lib/sdk/udl/angularjs/html2angularjs.udl
