languages: Enabled Haml syntax highlighting - fixes #2230
rn=

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1732,6 +1732,11 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jserb_language@ActiveSt
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jserb_language@ActiveState.com/lexers/JSERB.lexres
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jserb_language@ActiveState.com/templates/All Languages/JSERB.js.erb
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/jserb_language@ActiveState.com/templates/Common/JSERB.js.erb
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/chrome.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/components/component.manifest
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/components/koHamlLanguage.py
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/lexers/Haml.lexres
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mustache_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mustache_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/mustache_language@ActiveState.com/components/koMustache_UDL_Language.py
