Wix: Fixing the Wix

--- a/src/install/wix/feature-core.ini
+++ b/src/install/wix/feature-core.ini
@@ -1787,6 +1787,7 @@ feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/epmojo_language@ActiveS
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/fugue@p.yusukekamiyamane.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/fugue@p.yusukekamiyamane.com/fugue.jar
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/fugue@p.yusukekamiyamane.com/install.rdf
+feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/haml_language@ActiveState.com/components/koHaml_UDL_Language.py
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/html_language@ActiveState.com/chrome.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/html_language@ActiveState.com/components/component.manifest
 feature-core/INSTALLDIR/lib/mozilla/distribution/bundles/html_language@ActiveState.com/components/koHTML_UDL_Language.py
