Update doc links to new docs URL. Fixes #3154. rn=
(integrated from the KomodoIDE master branch change 6daf56d by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/6daf56d

--- a/src/install/wix/komodo.wxs.in
+++ b/src/install/wix/komodo.wxs.in
@@ -174,7 +174,7 @@
     <CustomAction Id="LaunchProduct" FileKey="KomodoExe"
         ExeCommand="" Return="asyncNoWait" />
     <CustomAction Id="OpenDocs" BinaryKey="startw.exe"
-        ExeCommand='"http://docs.komodoide.com/manual"' Return="asyncNoWait" />
+        ExeCommand='"http://docs.activestate.com/komodo"' Return="asyncNoWait" />
     <!-- XXX CustomAction to set ARPINSTALLLOCATION? -->
 
     <!-- Quote INSTALLDIR because it likely contains spaces. Add '.' suffix
